--- a/.github/workflows/audits.yml
+++ b/.github/workflows/audits.yml
@@ -11,7 +11,7 @@ permissions:
 jobs:
   cargo-vet:
     name: Vet Rust dependencies
-    runs-on: ubuntu-latest
+    runs-on: tenki-standard-large-plus-16c-32g
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
@@ -22,7 +22,7 @@ jobs:
 
   cargo-deny:
     name: Check licenses
-    runs-on: ubuntu-latest
+    runs-on: tenki-standard-large-plus-16c-32g
     steps:
       - uses: actions/checkout@v4
       - uses: EmbarkStudios/cargo-deny-action@v1
