--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -11,7 +11,7 @@ jobs:
     permissions:
       contents: write # to push pages branch (peaceiris/actions-gh-pages)
 
-    runs-on: ubuntu-latest
+    runs-on: tenki-standard-large-plus-16c-32g
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
