--- a/.github/workflows/ci-skip.yml
+++ b/.github/workflows/ci-skip.yml
@@ -34,7 +34,7 @@ permissions:
 jobs:
   required-pass:
     name: Bypass required-pass steps
-    runs-on: ubuntu-latest
+    runs-on: tenki-standard-large-plus-16c-32g
 
     steps:
       - name: Check out the base branch
