--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ permissions:
 jobs:
   setup:
     name: Define CI matrix
-    runs-on: ubuntu-latest
+    runs-on: tenki-standard-large-plus-16c-32g
     strategy:
       matrix:
         cfg:
