--- a/.github/workflows/release-docker-hub.yaml
+++ b/.github/workflows/release-docker-hub.yaml
@@ -9,7 +9,7 @@ on:
 jobs:
   set_env:
     name: Create version tag
-    runs-on: ubuntu-latest
+    runs-on: tenki-standard-large-plus-16c-32g
     outputs:
       tags: ${{ steps.version_step.outputs.tags }}
       zcash_version: ${{ steps.version_step.outputs.zcash_version }}
