--- a/src/secp256k1/.github/workflows/ci.yml
+++ b/src/secp256k1/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ env:
 jobs:
   docker_cache:
     name: "Build Docker image"
-    runs-on: ubuntu-latest
+    runs-on: tenki-standard-large-plus-16c-32g
     steps:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -63,7 +63,7 @@ jobs:
 
   linux_debian:
     name: "x86_64: Linux (Debian stable)"
-    runs-on: ubuntu-latest
+    runs-on: tenki-standard-large-plus-16c-32g
     needs: docker_cache
 
     strategy:
@@ -125,7 +125,7 @@ jobs:
 
   i686_debian:
     name: "i686: Linux (Debian stable)"
-    runs-on: ubuntu-latest
+    runs-on: tenki-standard-large-plus-16c-32g
     needs: docker_cache
 
     strategy:
@@ -173,7 +173,7 @@ jobs:
 
   s390x_debian:
     name: "s390x (big-endian): Linux (Debian stable, QEMU)"
-    runs-on: ubuntu-latest
+    runs-on: tenki-standard-large-plus-16c-32g
     needs: docker_cache
 
     env:
@@ -217,7 +217,7 @@ jobs:
 
   arm32_debian:
     name: "ARM32: Linux (Debian stable, QEMU)"
-    runs-on: ubuntu-latest
+    runs-on: tenki-standard-large-plus-16c-32g
     needs: docker_cache
 
     strategy:
@@ -269,7 +269,7 @@ jobs:
 
   arm64_debian:
     name: "ARM64: Linux (Debian stable, QEMU)"
-    runs-on: ubuntu-latest
+    runs-on: tenki-standard-large-plus-16c-32g
     needs: docker_cache
 
     env:
@@ -324,7 +324,7 @@ jobs:
 
   ppc64le_debian:
     name: "ppc64le: Linux (Debian stable, QEMU)"
-    runs-on: ubuntu-latest
+    runs-on: tenki-standard-large-plus-16c-32g
     needs: docker_cache
 
     env:
@@ -368,7 +368,7 @@ jobs:
 
   valgrind_debian:
     name: "Valgrind (memcheck)"
-    runs-on: ubuntu-latest
+    runs-on: tenki-standard-large-plus-16c-32g
     needs: docker_cache
 
     strategy:
@@ -422,7 +422,7 @@ jobs:
 
   sanitizers_debian:
     name: "UBSan, ASan, LSan"
-    runs-on: ubuntu-latest
+    runs-on: tenki-standard-large-plus-16c-32g
     needs: docker_cache
 
     strategy:
@@ -477,7 +477,7 @@ jobs:
 
   msan_debian:
     name: "MSan"
-    runs-on: ubuntu-latest
+    runs-on: tenki-standard-large-plus-16c-32g
     needs: docker_cache
 
     strategy:
@@ -533,7 +533,7 @@ jobs:
 
   mingw_debian:
     name: ${{ matrix.configuration.job_name }}
-    runs-on: ubuntu-latest
+    runs-on: tenki-standard-large-plus-16c-32g
     needs: docker_cache
 
     env:
@@ -706,7 +706,7 @@ jobs:
 
   cxx_fpermissive_debian:
     name: "C++ -fpermissive (entire project)"
-    runs-on: ubuntu-latest
+    runs-on: tenki-standard-large-plus-16c-32g
     needs: docker_cache
 
     env:
@@ -749,7 +749,7 @@ jobs:
 
   cxx_headers_debian:
     name: "C++ (public headers)"
-    runs-on: ubuntu-latest
+    runs-on: tenki-standard-large-plus-16c-32g
     needs: docker_cache
 
     steps:
@@ -767,7 +767,7 @@ jobs:
 
   sage:
     name: "SageMath prover"
-    runs-on: ubuntu-latest
+    runs-on: tenki-standard-large-plus-16c-32g
     container:
       image: sagemath/sagemath:latest
       options: --user root
@@ -782,7 +782,7 @@ jobs:
           sage prove_group_implementations.sage
 
   release:
-    runs-on: ubuntu-latest
+    runs-on: tenki-standard-large-plus-16c-32g
 
     steps:
       - name: Checkout
